<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SecondActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="360dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/email_subject_hint"
                android:textColor="@color/secondColor"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_view_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/password_hint"
                android:textColor="@color/secondColor"


                android:textSize="24sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b_return"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="Return"
                android:backgroundTint="@color/secondColor"
                android:textSize="@dimen/main" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/email_address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_email2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:autofillHints=""
                android:hint="@string/email_subject_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/your_password"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_text_password2"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:autofillHints=""
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/b_send"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="Send"
                android:textSize="@dimen/main" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="120dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/flower"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>